--- a/firstHomeWork/src/index.html
+++ b/firstHomeWork/src/index.html
@@ -15,16 +15,16 @@
 <body>
     <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
-            <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+            <a href="/" class=" fw-bold d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
                 John Doe
             </a>
-            <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 navcollor">
                 <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
-                <li><a href="#" class="nav-link px-2 link-dark">About</a></li>
-                <li><a href="#" class="nav-link px-2 link-dark">Work</a></li>
+                <li><a href="#about" class="nav-link px-2 link-dark">About</a></li>
+                <li><a href="#work" class="nav-link px-2 link-dark">Work</a></li>
             </ul>
 
-            <div class="col-md-3 text-end">
+            <div class="col-md-3 text-end px-4">
                 <i class="fa-brands fa-medium"></i>
                 <i class="fa-brands fa-behance"></i>
                 <i class="fa-brands fa-twitter"></i>
@@ -32,30 +32,53 @@
         </header>
         <section>
             <div class="row">
-                <div class="col-12 col-md-6 text-start justify-content-center">
-                    <h3>Hello, l'm John</h3>
-                    <h1 class="">Product Designer</h1>
-                    <h3>based in Netherland</h3>
+                <div class="col-12 col-md-6 text-start home">
+                    <h3 class="homet1">Hello, l'm John</h3>
+                    <h1 class="homet2">Product Designer</h1>
+                    <h3 class="homet1">based in Netherland</h3>
                     <button class="button-52" role="button">Resume</button>
                 </div>
                 <div class="col col-md-6">
                     <div class="text-center position-relative">
                         <div class="circel"></div>
-                            <div class="img-top">+</div>
-                            <div class="img-mid">+</div>
-                            <div class="img-bottom">+</div>
-                            <img src="/src//assets//unsplash_d1upkifd04a.png" class="img-rounded" alt="...">
-                            <div class="bottom-img">/////</div>
+                        <div class="img-top">+</div>
+                        <div class="img-mid">+</div>
+                        <div class="img-bottom">+</div>
+                        <img src="/src//assets//unsplash_d1upkifd04a.png" class="img-rounded" alt="...">
+                        <div class="bottom-img">/////</div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section>
-            <h1>About.</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque in officia eligendi atque nesciunt sequi,
-                amet voluptatem, qui maxime libero laboriosam adipisci nisi animi? Esse, minima illum. Repellendus,
-                facere maiores!</p>
+        <section id="about" class="about justify-content-between">
+            <div class="">
+                <h1 class="color">About.</h1>
+                <p class=" w-75 p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque in officia eligendi
+                    atque nesciunt sequi,
+                    amet voluptatem, qui maxime libero laboriosam adipisci nisi animi? Esse, minima illum. Repellendus,
+                    facere maiores!</p>
+            </div>
+
+            <ul class=" w-75 a">
+                <li>
+                    2014-2018
+                </li>
+                <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam vitae dolorum voluptas
+                    architecto, delectus distinctio eligendi nihil tempore vel molestias nemo, id facilis maiores
+                    obcaecati? Nulla, ipsa quam. Ut, provident!</span>
+                <li>2018-2020</li>
+                <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam vitae dolorum voluptas
+                    architecto, delectus distinctio eligendi nihil tempore vel molestias nemo, id facilis maiores
+                    obcaecati? Nulla, ipsa quam. Ut, provident!</span>
+
+                <li>2020 - Present</li>
+                <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam vitae dolorum voluptas
+                    architecto, delectus distinctio eligendi nihil tempore vel molestias nemo, id facilis maiores
+                    obcaecati? Nulla, ipsa quam. Ut, provident!</span>
+
+            </ul>
+
         </section>
     </div>
 
