--- a/firstHomeWork/src/index.html
+++ b/firstHomeWork/src/index.html
@@ -18,10 +18,10 @@
             <a href="/" class=" fw-bold d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
                 John Doe
             </a>
-            <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 navcollor">
-                <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
-                <li><a href="#about" class="nav-link px-2 link-dark">About</a></li>
-                <li><a href="#work" class="nav-link px-2 link-dark">Work</a></li>
+            <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 ">
+                <li><a href="#" class="nav-link px-2 link-secondary navcollor">Home</a></li>
+                <li><a href="#about" class="nav-link px-2 link-secondary navcollor">About</a></li>
+                <li><a href="#work" class="nav-link px-2 link-secondary navcollor">Work</a></li>
             </ul>
 
             <div class="col-md-3 text-end px-4">
