--- a/firstHomeWork/src/index.html
+++ b/firstHomeWork/src/index.html
@@ -22,6 +22,7 @@
                 <li><a href="#" class="nav-link px-2 link-secondary navcollor">Home</a></li>
                 <li><a href="#about" class="nav-link px-2 link-secondary navcollor">About</a></li>
                 <li><a href="#work" class="nav-link px-2 link-secondary navcollor">Work</a></li>
+                <li><a href="#contact" class="nav-link px-2 link-secondary navcollor">Contact</a></li>
             </ul>
 
             <div class="col-md-3 text-end px-4">
@@ -50,7 +51,7 @@
                 </div>
             </div>
         </section>
-
+        <hr>
         <section id="about" class="about justify-content-between">
             <div class="">
                 <h1 class="color">About.</h1>
@@ -60,7 +61,7 @@
                     facere maiores!</p>
             </div>
 
-            <ul class=" w-75 a">
+            <ul class=" w-75">
                 <li>
                     2014-2018
                 </li>
@@ -79,6 +80,40 @@
 
             </ul>
 
+        </section>
+        <hr>
+        <section id="work">
+            <h1 class="color">Work.</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quod omnis ducimus laboriosam sequi
+                impedit quasi. Amet temporibus molestiae eos nobis labore consequuntur velit blanditiis beatae in
+                corporis, rerum iusto!</p>
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <div class="cardd">
+                        <img src="/src/assets/unsplash_2xht5d22y0i.png" class="card-img-top rounded">
+                        <div class="card-body">
+                            <span>November 24, 2019</span>
+                            <h5 class="card-title">Some Case Study</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed aliquam sollicitudin rhoncus morbi. Tincidunt quam sem elit a convallis. Eget ipsum, velit vitae eu nunc, consequat, at.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="cardd">
+                        <img src="/src/assets/unsplash_ubiwo074qlu.png" class="card-img-top rounded">
+                        <div class="card-body">
+                            <span>November 24, 2019</span>
+                            <h5 class="card-title">Some Case Study</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed aliquam sollicitudin rhoncus morbi. Tincidunt quam sem elit a convallis. Eget ipsum, velit vitae eu nunc, consequat, at.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <hr>
+        <section id="contact">
+            <h1 class="color">Contact.</h1>
+           
         </section>
     </div>
 
