--- a/firstHomeWork/src/index.html
+++ b/firstHomeWork/src/index.html
@@ -16,9 +16,9 @@
     <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
             <a href="/" class=" fw-bold d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-                John Doe
+               <strong>John Doe</strong>
             </a>
-            <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 ">
+            <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="#" class="nav-link px-2 link-secondary navcollor">Home</a></li>
                 <li><a href="#about" class="nav-link px-2 link-secondary navcollor">About</a></li>
                 <li><a href="#work" class="nav-link px-2 link-secondary navcollor">Work</a></li>
@@ -61,7 +61,7 @@
                     facere maiores!</p>
             </div>
 
-            <ul class=" w-75">
+            <ul class=" w-75 mx-5">
                 <li>
                     2014-2018
                 </li>
@@ -123,10 +123,10 @@
                 <div class="col-12 col-md-6 p-4">
                     <div class="contactCard">
                         <div class="py-3">
-                            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet vulputate tristique quam felis. Id phasellus dui orci vulputate consequat nulla proin. Id sit scelerisque neque, proin bibendum diam.</span>
-                            <h3 class="py-3">johndoe@mail.com</h3>
-                            <h3 class="py-3">twitter.com/johndoe</h3>
-                            <h3 class="py-3">behance.com/johndoe</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet vulputate tristique quam felis. Id phasellus dui orci vulputate consequat nulla proin. Id sit scelerisque neque, proin bibendum diam.</ğ>
+                            <h5 class="py-3">johndoe@mail.com</h5>
+                            <h5 class="py-3">twitter.com/johndoe</h5>
+                            <h5 class="py-3">behance.com/johndoe</h5>
                         </div>
                     </div>
                 </div>
